Posts are sorted by date from file name and by their IDs

--- a/packages/Generator/tests/GeneratorSource/source/_posts/2017-01-01-some-post.md
+++ b/packages/Generator/tests/GeneratorSource/source/_posts/2017-01-01-some-post.md
@@ -1,7 +1,7 @@
 ---
-id: 1
+id: 2017-01-01-1
 title: How to relate to the Same Post
-related_items: [2, 3, 4]
+related_items: [2017-01-05-1, 2017-01-05-2, 2017-02-05-1]
 ---
 
 There should be some content to determine similarity.
